# django-logpipe

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  docker-compose.yml  mkdocs.yml  pyproject.toml  renovate.json  requirements.txt  setup.cfg  setup.py  test.sh  tox.ini
docs/: api.md  custom-styles.css  index.md  installation.md  releases.md  usage.md
logpipe/: __init__.py  abc.py  admin.py  config.py  consumer.py  exceptions.py  format.py  models.py  offset_backends.py  producer.py  registry.py  settings.py
logpipe/backend/: dummy.py  kafka.py  kinesis.py
logpipe/formats/: json.py  msgpack.py  pickle.py
logpipe/locale/es/LC_MESSAGES/: django.po
logpipe/management/commands/: run_kafka_consumer.py
logpipe/migrations/: 0002_auto_20170427_1451.py  0003_auto_20170427_1703.py
logpipe/tests/: common.py  test_consumer.py  test_format.py  test_producer.py  test_roundtrip.py
logpipe/tests/unit/: test_consumer.py  test_format.py  test_producer.py  test_settings.py
logpipe/tests/unit/kafka/: test_consumer.py
logpipe/tests/unit/kinesis/: test_consumer.py  test_producer.py
sandbox/: manage.py  settings.py  urls.py
sandbox/lptester/: __init__.py  admin.py  apps.py  constants.py  consumers.py  models.py  producers.py  serializers.py  signals.py
sandbox/lptester/migrations/: 0001_initial.py  0002_person_uuid.py
sandbox/sandbox/: settings.py  urls.py
src/logpipe/: __init__.py  abc.py  admin.py  apps.py  config.py  constants.py  consumer.py  docgen_setup.py  exceptions.py  format.py  models.py  offset_backends.py  producer.py  registry.py  settings.py
src/logpipe/backend/: __init__.py  kafka.py  kinesis.py
src/logpipe/formats/: json.py  msgpack.py  pickle.py
src/logpipe/locale/es/LC_MESSAGES/: django.mo  django.po
src/logpipe/management/commands/: run_kafka_consumer.py
src/logpipe/migrations/: 0001_initial.py  0002_auto_20170427_1451.py  0003_auto_20170427_1703.py  0004_auto_20170502_1403.py  0005_auto_20180917_1348.py  0006_alter_kafkaoffset_options_and_more.py
src/logpipe/tests/: common.py
src/logpipe/tests/integration/: test_roundtrip.py
src/logpipe/tests/unit/: test_consumer.py  test_format.py  test_producer.py  test_settings.py
src/logpipe/tests/unit/kafka/: test_consumer.py  test_producer.py
src/logpipe/tests/unit/kinesis/: test_consumer.py  test_producer.py
