[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-logpipe"
version = "1.5.0"
description = "Move data around between Python services using Kafka and/or AWS Kinesis and Django Rest Framework serializers."
readme = "README.md"
dependencies = [
    "Django (>=4.2)",
    "djangorestframework (>=3.16.0)",
    "lru-dict (>=1.3.0)",
    "pydantic (>=2.11.3,<3)",
    "kafka-python (>=2.1.5,<3)",
    "boto3 (>=1.37.36,<2)",
    "msgpack (>=1.1.0,<2)",
]
requires-python = ">=3.11"

[project.license]
text = "ISC"

[[project.authors]]
name = "thelab"
email = "thelabdev@thelab.co"

[project.urls]
Homepage = "https://gitlab.com/thelabnyc/django-logpipe"
Repository = "https://gitlab.com/thelabnyc/django-logpipe"

[dependency-groups]
dev = [
    "coverage==7.9.2",
    "ruff (>=0.11.6)",
    "moto (==5.1.8)",
    "boto3 (>=1.37.36,<2)",
    "boto3-stubs[kinesis] (>=1.37.36,<2)",
    "botocore-stubs (>=1.37.36,<2)",
    "psycopg2-binary (==2.9.10)",
    "tox==4.27.0",
    "pytz (==2025.2)",
    "kafka-python (==2.2.15)",
    "mypy (==1.17.0)",
    "django-stubs (==5.2.1)",
    "djangorestframework-stubs (==3.16.0)",
    "msgpack-types (==0.5.0)",
    "tox-uv>=1.26.1",
    "mkdocs (>=1.6.1,<2)",
    "pymdown-extensions (>=10.14.3,<11)",
    "mkdocs-material (>=9.6.12,<10)",
    "mkautodoc (>=0.2.0,<0.3)",
]

[tool.hatch.build.targets.wheel]
packages = ["logpipe"]

[tool.mypy]
python_version = "3.11"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

# Strict mode, see mypy --help
warn_unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
# warn_return_any = true
no_implicit_reexport = true
show_error_codes = true
# Not turned on by strict
strict_equality = true

[[tool.mypy.overrides]]
module = "kafka.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "logpipe.tests.*"
ignore_errors = true


[tool.django-stubs]
django_settings_module = "sandbox.settings"

[tool.isort]
profile = "black"
from_first = true

[tool.ruff]
line-length = 160

[tool.ruff.lint.isort]
from-first = true

[tool.coverage.run]
branch = true
source_pkgs = ["logpipe"]
omit = ["*/migrations/*", "*/snapshots/*", "*/tests/*"]

[tool.coverage.report]
show_missing = true
ignore_errors = true


[tool.commitizen]
name = "cz_conventional_commits"
annotated_tag = true
gpg_sign = true
tag_format = "v$version"
update_changelog_on_bump = true
changelog_merge_prerelease = true
version_provider = "pep621"
version_scheme = "pep440"
version_files = ["pyproject.toml:version"]
pre_bump_hooks = ["pre-commit run --all-files || true"]
post_bump_hooks = ["git push origin master $CZ_POST_CURRENT_TAG_VERSION"]
