[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-logpipe"
version = "1.5.1"
description = "Move data around between Python services using Kafka and/or AWS Kinesis and Django Rest Framework serializers."
readme = "README.md"
dependencies = [
    "Django (>=5.2)",
    "djangorestframework (>=3.16.1)",
    "lru-dict (>=1.4.1)",
    "pydantic (>=2.12.5,<3)",
    "kafka-python (>=2.3.0,<3)",
    "boto3 (>=1.42.43,<2)",
    "msgpack (>=1.1.2,<2)",
]
requires-python = ">=3.11"

[project.license]
text = "ISC"

[[project.authors]]
name = "thelab"
email = "thelabdev@thelab.co"

[project.urls]
Homepage = "https://gitlab.com/thelabnyc/django-logpipe"
Repository = "https://gitlab.com/thelabnyc/django-logpipe"

[dependency-groups]
dev = [
    "coverage==7.13.4",
    "ruff (>=0.15.1)",
    "moto (==5.1.21)",
    "boto3 (>=1.42.43,<2)",
    "boto3-stubs[kinesis] (>=1.42.43,<2)",
    "botocore-stubs (>=1.42.41,<2)",
    "psycopg2-binary (==2.9.11)",
    "tox (>=4.35.0)",
    "pytz (==2025.2)",
    "kafka-python (==2.3.0)",
    "mypy (==1.19.1)",
    "django-stubs (==5.2.9)",
    "djangorestframework-stubs (==3.16.8)",
    "msgpack-types (==0.7.0)",
    "tox-uv (>=1.29.0)",
    "mkdocs (>=1.6.1,<2)",
    "pymdown-extensions (>=10.21,<11)",
    "mkdocs-material (>=9.7.1,<10)",
    "mkautodoc (>=0.2.0,<0.3)",
]

[tool.hatch.build.targets.wheel]
packages = ["logpipe"]

[[tool.uv.index]]
name = "thelabnyc"
url = "https://gitlab.com/api/v4/groups/269576/-/packages/pypi/simple"
explicit = true

[tool.mypy]
python_version = "3.11"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

# Strict mode, see mypy --help
warn_unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
# warn_return_any = true
no_implicit_reexport = true
show_error_codes = true
# Not turned on by strict
strict_equality = true

[[tool.mypy.overrides]]
module = "kafka.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "logpipe.tests.*"
ignore_errors = true


[tool.django-stubs]
django_settings_module = "sandbox.settings"

[tool.isort]
profile = "black"
from_first = true

[tool.ruff]
line-length = 160

[tool.ruff.lint.isort]
from-first = true

[tool.coverage.run]
branch = true
source_pkgs = ["logpipe"]
omit = ["*/migrations/*", "*/snapshots/*", "*/tests/*"]

[tool.coverage.report]
show_missing = true
ignore_errors = true


[tool.commitizen]
name = "cz_conventional_commits"
annotated_tag = true
gpg_sign = true
tag_format = "v$version"
update_changelog_on_bump = true
changelog_merge_prerelease = true
version_provider = "pep621"
version_scheme = "pep440"
version_files = ["pyproject.toml:version"]
pre_bump_hooks = ["pre-commit run --all-files || true"]
post_bump_hooks = ["git push origin master $CZ_POST_CURRENT_TAG_VERSION"]
